@@ -20,7 +20,7 @@ CONFIG_THUMB=y
 # General Setup
 #
 CONFIG_TARGET_DESCRIPTION="HP MediaVault 2120"
-CONFIG_CROSS_COMPILE=""
+CONFIG_CROSS_COMPILE="/opt/arm-2008q3/bin/arm-none-eabi-"
 CONFIG_AEABI=y
 CONFIG_DRIVER_LONG_LONG_SIZE=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
